--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "firebase": "^10.7.1",
     "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
-    "next": "14.0.4",
-    "node": "^21.2.0",
-    "protobufjs": "^7.2.5",
+    "next": "^13.4.19",
     "react": "^18",
     "react-dom": "^18"
   },
