--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.14.0",
     "@types/readable-stream": "^4.0.10",
     "antd": "^5.12.8",
     "axios": "^1.6.5",
