--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "next": "^13.4.19",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@types/node": "^20",
